Changes to responsive web design on mobile Fixed header social and sidebar closes after clicking in link

--- a/src/app.scss
+++ b/src/app.scss
@@ -8,12 +8,13 @@
 html {
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
-  width: 100%;
+  width:max-content;
 }
 
 body {
   background-color: #0c0c1d;
   color: lightgray;
+  overflow-x: hidden;
 }
 
 section {
