--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -22,7 +22,7 @@
       z-index: 10;
 
       @include mobile {
-        height: 50%;
+        height: 60%;
         width: 100%;
         gap: 20px;
         align-items: center;
