--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -29,6 +29,7 @@
     .social {
       display: flex;
       gap: 20px;
+      margin-right: 20px;
 
       img {
         width: 18px;
